# superbryn-pipecat-observer

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  test_import.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml  test-release.yml
examples/: basic_agent.py  synthetic_call.py
superbryn_pipecat_observer/: __init__.py  _provider_detect.py  audio_recorder.py  config.py  observer.py  s3_uploader.py
superbryn_pipecat_observer/transports/: __init__.py  base.py  daily.py  plivo.py  twilio.py  vobiz.py
