[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superbryn-pipecat-observer"
version = "0.3.1"
description = "Track and evaluate Pipecat agent sessions with automatic metrics, transcripts, and usage analytics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "superbryndev", email = "support@superbryndev.com"}
]
keywords = ["pipecat", "agents", "analytics", "metrics", "evaluation", "voice-ai", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Telephony",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "pipecat-ai>=0.0.50",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/superbryndev/superbryn-pipecat-observer"
Documentation = "https://docs.superbryn.com/monitor/integrations#pipecat-sdk"
Repository = "https://github.com/superbryndev/superbryn-pipecat-observer"
Issues = "https://github.com/superbryndev/superbryn-pipecat-observer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["superbryn_pipecat_observer*"]
exclude = ["tests*", "examples*"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".venv", "build", "dist"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # default arg call — common pattern in observer constructors
]

[tool.ruff.lint.per-file-ignores]
"test_import.py" = ["F401", "F841"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
